--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -8,3 +8,5 @@ sysinfo = "0.29.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
+sha2 = "0.10.9"
+walkdir = "2.5.0"
