--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -8,5 +8,7 @@ sysinfo = "0.29.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
-sha2 = "0.10.9"
+sha2 = "0.10"
 walkdir = "2.5.0"
+hex = "0.4"
+users = "0.11"
