--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -13,3 +13,10 @@ walkdir = "2.5.0"
 hex = "0.4"
 users = "0.11"
 netstat2 = "0.9"
+winapi = "0.3.9"
+windows = { version = "0.52", features = [
+    "Win32_Foundation",
+    "Win32_System_Threading",
+    "Win32_Security"
+] }
+winreg = "0.10"
